# entrevista-backend

./: .gitignore  Dockerfile  docker-compose.yaml  manage.py  pyproject.toml
oms/: api.py  models.py  schemas.py
oms/fixtures/: products.json  suppliers.json
oms/migrations/: 0001_initial.py
sawa/: asgi.py  settings.py  urls.py  wsgi.py
